# ProjAbyss

./: .gitignore  .gitmessage  Cargo.toml  ProjAbyss.uproject  README.md  TASKS.md  proj.md
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: BP_DivingBell.uasset  BP_MarineCharacter.uasset  BP_MasterShip.uasset  Map_MainOcean.umap  Map_MainOcean_HLOD0_Instancing.uasset
Content/Input/: IA_CharInteract.uasset  IA_CharJump.uasset  IA_CharLook.uasset  IA_CharMove.uasset  IA_ShipMove.uasset  IA_ShipTurn.uasset  IA_Winch.uasset  IMC_Default.uasset  IMC_ShipControls.uasset
Content/__ExternalActors__/Map_MainOcean/0/4D/: 2X00G688KAL8STFD61UKQ1.uasset
Content/__ExternalActors__/Map_MainOcean/0/8I/: EJ0R399N6XT4RFN3LXKTH0.uasset
ProjAbyss (Mac).xcworkspace/: contents.xcworkspacedata
Source/: ProjAbyss.Target.cs  ProjAbyssEditor.Target.cs
Source/ProjAbyss/: ProjAbyss.Build.cs  ProjAbyss.cpp
Source/ProjAbyss/Private/: DivingBell.cpp  MarineCharacter.cpp  MasterShip.cpp
Source/ProjAbyss/Public/: DivingBell.h  InteractableInterface.h  MarineCharacter.h  MasterShip.h  OceanSolver.h
assets/audio/: README.txt
docs/: DESIGN.md  EXPLORATION.md  FOUNDATION.md  GRAPHICS_ISLAND_GEN.md  GRAPHICS_UPGRADE_ROADMAP.md  ISLANDS_UE_RESEARCH.md  LIBRARY_ECOSYSTEM.md  README.md  SCALE_AUDIT.md  VISION_SUBNAUTICA_SOT.md
src/: artifacts.rs  audio.rs  character.rs  diving_bell.rs  fauna.rs  game_state.rs  interaction.rs  islands.rs  main.rs  marine_snow.rs  ocean.rs  player.rs  save_load.rs  scatter.rs  settings.rs  ship.rs  winch.rs  world.rs
(+147 files in other folders)
