[package]
name = "proj_abyss"
version = "0.1.0"
edition = "2021"
description = "Co-op extraction survival. Sail -> Scan -> Dive -> Extract."

[dependencies]
bevy = { version = "0.17", features = ["bevy_post_process"] }
bevy_rapier3d = "0.32"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
